<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PlanificadorDiario" >

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="98dp"
        android:layout_marginTop="43dp"
        android:layout_marginEnd="255dp"
        android:text="@string/planificador_de_tareas"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edtUsuario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/edt_usuario"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/edtContraseña"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView9"
        tools:ignore="TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/edtContraseña"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/edt_contraseña"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="@+id/edtUsuario"
        app:layout_constraintStart_toStartOf="@+id/edtUsuario"
        app:layout_constraintTop_toBottomOf="@+id/edtUsuario"
        tools:ignore="TouchTargetSizeCheck"
        />

    <Button
        android:id="@+id/btIniciarSesion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/bt_iniciar_sesion"
        app:layout_constraintBottom_toTopOf="@+id/btRedirigeRegristrarse"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtContraseña" />

    <Button
        android:id="@+id/btRedirigeRegristrarse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/bt_registrarse"
        app:layout_constraintEnd_toEndOf="@+id/btIniciarSesion"
        app:layout_constraintStart_toStartOf="@+id/btIniciarSesion"
        app:layout_constraintTop_toBottomOf="@+id/btIniciarSesion" />

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/fcRegistrarse"
        android:name="com.example.planificadordetareas.BlackFragment"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btRedirigeRegristrarse" />
</androidx.constraintlayout.widget.ConstraintLayout>